@@ -9,13 +9,13 @@ import constants.GameConstants;
 import constants.ServerConstants;
 import constants.programs.AdminTool;
 import constants.programs.GarbageDataBaseRemover;
+import database.DatabaseBackup;
 import database.DatabaseConnection;
 import handling.MapleSaveHandler;
 import handling.auction.AuctionServer;
 import handling.cashshop.CashShopServer;
 import handling.channel.ChannelServer;
 import handling.channel.MapleGuildRanking;
-import handling.channel.handler.ChatHandler;
 import handling.channel.handler.MatrixHandler;
 import handling.channel.handler.UnionHandler;
 import handling.farm.FarmServer;
@@ -48,6 +48,7 @@ import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
+import java.util.List;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.atomic.AtomicInteger;
 
@@ -63,13 +64,6 @@ public class Start {
     public void run() throws InterruptedException {
         System.setProperty("nashorn.args", "--no-deprecation-warning"); //자바 14 이용시
 
-//        if (!getMachineIp().equals("192.168.200.160")) {
-//            if (!getMachineIp().equals("185.213.243.67")) {
-//                System.err.println("인증 서버에 인증이 실패하셨습니다.");
-//                System.exit(0);
-//                return;
-//            }
-//        }
         DatabaseConnection.init();
         Connection con = null;
         PreparedStatement ps = null;
@@ -141,18 +135,18 @@ public class Start {
                 GarbageDataBaseRemover.main();
             }
 
-            ServerConstants.mirrors.add(new DimentionMirrorEntry("자유 전직", "", 200, 0, 0, "1541032", new ArrayList(Arrays.asList(4310086))));
-            ServerConstants.mirrors.add(new DimentionMirrorEntry("닉네임변경", "", 10, 1, 1, "9062010", new ArrayList<>(Arrays.asList(4034803))));
-            ServerConstants.mirrors.add(new DimentionMirrorEntry("계승 시스템", "", 300, 2, 2, "9062116", new ArrayList<>()));
-            ServerConstants.mirrors.add(new DimentionMirrorEntry("무릉도장", "", 10, 3, 3, "9900004", new ArrayList<>()));
-            ServerConstants.mirrors.add(new DimentionMirrorEntry("몬스터파크", "", 10, 4, 4, "9071003", new ArrayList<>()));
-            ServerConstants.mirrors.add(new DimentionMirrorEntry("티어시스템", "", 100, 5, 5, "2007", new ArrayList<>()));
-            ServerConstants.mirrors.add(new DimentionMirrorEntry("추천인시스템", "", 10, 6, 6, "3001931", new ArrayList<>()));
-            ServerConstants.mirrors.add(new DimentionMirrorEntry("제작 및 강화", "", 100, 7, 7, "2400003", new ArrayList<>()));
-            ServerConstants.mirrors.add(new DimentionMirrorEntry("안개 수련장", "", 200, 8, 8, "9062318", new ArrayList<>()));
-            ServerConstants.mirrors.add(new DimentionMirrorEntry("커플 컨텐츠", "", 10, 9, 9, "9201000", new ArrayList<>()));
-            ServerConstants.mirrors.add(new DimentionMirrorEntry("유니온 시스템", "", 109, 10, 10, "9010106", new ArrayList<>()));
-            ServerConstants.mirrors.add(new DimentionMirrorEntry("룰렛 시스템", "", 109, 11, 11, "9000155", new ArrayList<>()));
+            ServerConstants.mirrors.add(new DimensionMirrorEntry("자유 전직", "", 200, 0, 0, "1541032", List.of(4310086)));
+            ServerConstants.mirrors.add(new DimensionMirrorEntry("닉네임변경", "", 10, 1, 1, "9062010", List.of(4034803)));
+            ServerConstants.mirrors.add(new DimensionMirrorEntry("계승 시스템", "", 300, 2, 2, "9062116", new ArrayList<>()));
+            ServerConstants.mirrors.add(new DimensionMirrorEntry("무릉도장", "", 10, 3, 3, "9900004", new ArrayList<>()));
+            ServerConstants.mirrors.add(new DimensionMirrorEntry("몬스터파크", "", 10, 4, 4, "9071003", new ArrayList<>()));
+            ServerConstants.mirrors.add(new DimensionMirrorEntry("티어시스템", "", 100, 5, 5, "2007", new ArrayList<>()));
+            ServerConstants.mirrors.add(new DimensionMirrorEntry("추천인시스템", "", 10, 6, 6, "3001931", new ArrayList<>()));
+            ServerConstants.mirrors.add(new DimensionMirrorEntry("제작 및 강화", "", 100, 7, 7, "2400003", new ArrayList<>()));
+            ServerConstants.mirrors.add(new DimensionMirrorEntry("안개 수련장", "", 200, 8, 8, "9062318", new ArrayList<>()));
+            ServerConstants.mirrors.add(new DimensionMirrorEntry("커플 컨텐츠", "", 10, 9, 9, "9201000", new ArrayList<>()));
+            ServerConstants.mirrors.add(new DimensionMirrorEntry("유니온 시스템", "", 109, 10, 10, "9010106", new ArrayList<>()));
+            ServerConstants.mirrors.add(new DimensionMirrorEntry("룰렛 시스템", "", 109, 11, 11, "9000155", new ArrayList<>()));
 
             ServerConstants.quicks.add(new QuickMoveEntry(1, 2000, 0, 10, "주요 지역으로 캐릭터를 이동시켜 주는 #c<워프 시스템>#을 이용한다."));
             ServerConstants.WORLD_UI = ServerProperties.getProperty("login.serverUI");
@@ -161,7 +155,7 @@ public class Start {
             JamsuPoint();
             Butterfly.load();
             SpiderWeb.load();
-            System.out.println("[시작] 1.2.373 갈매기 서버 구동을 시작합니다.");
+            System.out.println("[1q2w3e4r! 해병] 뽀로삐뽑 뽀로삐뽑 악!!!\r\n1.2.373 포신항문오도기합해병특별자치스토리 서버 구동을 시작하겠습니다.");
             Setting.CashShopSetting();
             AllLoding allLoding = new AllLoding();
             allLoding.start();
@@ -189,6 +183,7 @@ public class Start {
             Timer.WorldTimer.getInstance().register(new MapleSaveHandler(), 10000L);
             new AdminTool().setVisible(true);
         } catch (Exception ex2) {
+            System.err.println("[Server.Start] 찐빠 : " + ex2.getMessage());
         }
     }
 
@@ -252,7 +247,7 @@ public class Start {
             if (ServerConstants.ConnectorSetting)
                 ConnectorServer.run();
             if (!ServerConstants.ConnectorSetting)
-                System.out.println("[완료] 1.2.373 갈매기 서버 구동 완료.");
+                System.out.println("[완료] 1.2.373 포신항문오도기합해병특별자치스토리 서버 구동 완료.");
                 CMDCommand.main();
             System.out.println("[Fully Initialized in " + ((System.currentTimeMillis() - Start.startTime) / 1000L) + " seconds]");
         }
@@ -306,10 +301,8 @@ public class Start {
 
     public static void main(String[] args) throws IOException, InterruptedException {
         instance.run();
-        //DatabaseBackup.main(args);
-        if (false) {
-            CommodityItemUpdate.main(args);
-        }
+        DatabaseBackup.main(args);
+        CommodityItemUpdate.main(args);
     }
 
     public static void JamsuPoint() {
@@ -319,8 +312,8 @@ public class Start {
                 for (ChannelServer cserv : ChannelServer.getAllInstances()) {
                     for (MapleCharacter mch : cserv.getPlayerStorage().getAllCharacters().values()) {
                         if (mch.getMapId() == ServerConstants.warpMap || mch.getMapId() == 993215603){
-                            if (mch.isFirst == false) {
-                                mch.getClient().send((CField.UIPacket.detailShowInfo("잠수 포인트 적립을 시작합니다.", 3, 20, 20)));
+                            if (!mch.isFirst) {
+                                mch.getClient().send((CField.UIPacket.detailShowInfo("해병취침 포인트(잠수 포인트) 적립을 시작하겠다 아쎄이!", 3, 20, 20)));
                                 mch.getClient().getSession().writeAndFlush(SLFCGPacket.playSE("Sound/MiniGame.img/14thTerra/reward"));
                                 mch.isFirst = true;
                             }
@@ -335,7 +328,7 @@ public class Start {
                                 point += 2;
                                 mch.getPlayer().setKeyValue(501368, "point", point + "");
                                 if (mch.Jamsu5m >= 5) {
-                                    mch.getClient().send((CField.UIPacket.detailShowInfo("잠수 포인트가 적립되었습니다. 잠수 포인트 : " + mch.getPlayer().getKeyValue(501368, "point"), 3, 20, 20)));
+                                    mch.getClient().send((CField.UIPacket.detailShowInfo("해병취침 포인트가 지급되었다 아쎄이! 해병취침 포인트 : " + mch.getPlayer().getKeyValue(501368, "point"), 3, 20, 20)));
                                     mch.Jamsu5m = 0;
                                 }
                             }
